exports[`createKoulutus > should be able to create ammatillinen koulutus #0`] =
{
  "ePerusteId": 6777660,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_351107#12"
  ],
  "koulutustyyppi": "amm",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "amm",
    "kuvaus": {},
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "amm"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Kaivosalan perustutkinto"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create ammatillinen osaamisala koulutus #0`] =
{
  "ePerusteId": 6777660,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_351107#12"
  ],
  "koulutustyyppi": "amm-osaamisala",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "amm-osaamisala",
    "kuvaus": {},
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": "osaamisala_1800",
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "amm-osaamisala"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Kaivostyön osaamisala"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create ammatillinen tutkinnon osa koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "amm-tutkinnon-osa",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "amm-tutkinnon-osa",
    "kuvaus": {},
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [
      {
        "ePerusteId": 6777660,
        "koulutusKoodiUri": "koulutus_351107#12",
        "tutkinnonosaId": 6777674,
        "tutkinnonosaViite": 6778201
      },
      {
        "ePerusteId": 6777660,
        "koulutusKoodiUri": "koulutus_351107#12",
        "tutkinnonosaId": 6778360,
        "tutkinnonosaViite": 6778207
      }
    ],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "amm-tutkinnon-osa"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Louhintaporaus"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create AMK-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_671112#12"
  ],
  "koulutustyyppi": "amk",
  "metadata": {
    "koulutusalaKoodiUrit": [
      "kansallinenkoulutusluokitus2016koulutusalataso2_091#1"
    ],
    "koulutustyyppi": "amk",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": 300,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [
      "tutkintonimikekk_533#2"
    ],
    "tyyppi": "amk"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Tiedot nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create lukiokoulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_301101#12"
  ],
  "koulutustyyppi": "lk",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "lk",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "lk"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Ylioppilastutkinto"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`editKoulutus > should be able to edit ammatillinen koulutus #0`] =
{
  "ePerusteId": 6777660,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_351107#12"
  ],
  "koulutustyyppi": "amm",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "amm",
    "kuvaus": {},
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "amm"
  },
  "muokkaaja": "1.2.246.562.24.26603962037",
  "nimi": {
    "fi": "Kaivosalan perustutkinto"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`editKoulutus > should be able to edit AMK-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_671112#12"
  ],
  "koulutustyyppi": "amk",
  "metadata": {
    "koulutusalaKoodiUrit": [
      "kansallinenkoulutusluokitus2016koulutusalataso2_052#1"
    ],
    "koulutustyyppi": "amk",
    "kuvaus": {
      "fi": "<p>Fi kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": "opintojenlaajuus_1#1",
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [
      "tutkintonimikekk_1#1",
      "tutkintonimikekk_2#1"
    ],
    "tyyppi": "amk"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Fysioterapeutti (AMK)"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`editKoulutus > should be able to edit lukiokoulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_309902#7"
  ],
  "koulutustyyppi": "lk",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "lk",
    "kuvaus": {},
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": "opintojenlaajuus_150",
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "lk"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Lukion oppimäärä"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`createKoulutus > should be able to create TUVA-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "tuva",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "tuva",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {
      "fi": "http://linkki.fi"
    },
    "lisatiedot": [],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": 38,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "tuva"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "koulutustyypit.tuva"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`editKoulutus > should be able to edit TUVA-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": true,
  "kielivalinta": [
    "fi",
    "sv"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_0#1"
  ],
  "koulutustyyppi": "tuva",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "tuva",
    "kuvaus": {
      "fi": "<p>kuvausteksti</p>"
    },
    "linkkiEPerusteisiin": {
      "fi": "http://testilinkki.fi"
    },
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": "opintojenlaajuus_38",
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "tuva"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Tutkintokoulutukseen valmentava koulutus (TUVA)",
    "sv": "Grundexamen inom lantbruksbranschen"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`createKoulutus > should be able to create "Vapaa Sivistystyö - Muu"-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "vapaa-sivistystyo-muu",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "vapaa-sivistystyo-muu",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {
      "fi": "http://linkki.fi"
    },
    "lisatiedot": [],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": 53,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": "opintojenlaajuusyksikko_2#1",
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "vapaa-sivistystyo-muu"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "vapaa sivistystyö nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create "Vapaa Sivistystyö - Opistovuosi"-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "vapaa-sivistystyo-opistovuosi",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "vapaa-sivistystyo-opistovuosi",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {
      "fi": "http://linkki.fi"
    },
    "lisatiedot": [],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": 53,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "vapaa-sivistystyo-opistovuosi"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "vapaa sivistystyö nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create TELMA-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "telma",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "telma",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {
      "fi": "http://linkki.fi"
    },
    "lisatiedot": [],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": 60,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "telma"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "koulutustyypit.telma"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`editKoulutus > should be able to edit TELMA-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": true,
  "kielivalinta": [
    "fi",
    "sv"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_0#1"
  ],
  "koulutustyyppi": "telma",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "telma",
    "kuvaus": {
      "fi": "<p>Kuvausta on muokattu</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": "opintojenlaajuus_60",
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "telma"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Työhön ja itsenäiseen elämään valmentava koulutus (TELMA)",
    "sv": "Grundexamen inom lantbruksbranschen"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`editKoulutus > should be able to delete koulutus #0`] =
{
  "ePerusteId": 6777660,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_351107#12"
  ],
  "koulutustyyppi": "amm",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "amm",
    "kuvaus": {},
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "amm"
  },
  "muokkaaja": "1.2.246.562.24.26603962037",
  "nimi": {
    "fi": "Kaivosalan perustutkinto"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "tila": "poistettu"
};

exports[`createKoulutus > should be able to create Ammatillinen opettaja- erityisopettaja ja opokoulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_000001#12"
  ],
  "koulutustyyppi": "amm-ope-erityisope-ja-opo",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "amm-ope-erityisope-ja-opo",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "amm-ope-erityisope-ja-opo"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Ammatillinen opettajankoulutus"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`editKoulutus > should be able to edit AMK-koulutus #1`] =
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_671112#12"
  ],
  "koulutustyyppi": "amk",
  "metadata": {
    "koulutusalaKoodiUrit": [
      "kansallinenkoulutusluokitus2016koulutusalataso2_052#1"
    ],
    "koulutustyyppi": "amk",
    "kuvaus": {
      "fi": "<p>Fi kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": "opintojenlaajuus_1#1",
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [
      "tutkintonimikekk_1#1",
      "tutkintonimikekk_2#1"
    ],
    "tyyppi": "amk"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Fysioterapeutti (AMK)"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`editKoulutus > should be able to edit ammatillinen ope-, erityisope- ja opokoulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_000001#12"
  ],
  "koulutustyyppi": "amm-ope-erityisope-ja-opo",
  "metadata": {
    "koulutusalaKoodiUrit": [
      "kansallinenkoulutusluokitus2016koulutusalataso1_01#1"
    ],
    "koulutustyyppi": "amm-ope-erityisope-ja-opo",
    "kuvaus": {
      "fi": "<p>Fi kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": "opintojenlaajuus_60#1",
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "amm-ope-erityisope-ja-opo"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Ammatillinen opettajankoulutus"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`createKoulutus > should be able to create muu ammatillinen koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "amm-muu",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "amm-muu",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": 12,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": "opintojenlaajuusyksikko_6#1",
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "amm-muu"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "muu ammatillinen nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create "Aikuisten perusopetus" -koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": true,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "aikuisten-perusopetus",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "aikuisten-perusopetus",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {
      "fi": "http://linkki.fi"
    },
    "lisatiedot": [],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": 13,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": "opintojenlaajuusyksikko_2#1",
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "aikuisten-perusopetus"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "koulutustyypit.aikuistenPerusopetus"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`editKoulutus > should be able to edit muu ammatillinen koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": true,
  "kielivalinta": [
    "fi",
    "sv"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_0#1"
  ],
  "koulutustyyppi": "amm-muu",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "amm-muu",
    "kuvaus": {
      "fi": "<p>Kuvausta on muokattu</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": 12,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "amm-muu"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Muut ammatilliset koulutukset",
    "sv": "Muut ammatilliset koulutukset"
  },
  "oid": "1.2.3.4.5.6",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.1.1.1.1.1",
    "1.2.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`createKoulutus > should be able to create "Korkeakoulutus opintojakso"-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "kk-opintojakso",
  "metadata": {
    "koulutusalaKoodiUrit": [
      "kansallinenkoulutusluokitus2016koulutusalataso2_091#1"
    ],
    "koulutustyyppi": "kk-opintojakso",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": 30,
    "opintojenLaajuusyksikkoKoodiUri": "opintojenlaajuusyksikko_2#1",
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "kk-opintojakso"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Opintojakso nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create korkeakoulutus opintojakso koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "kk-opintojakso",
  "metadata": {
    "koulutusalaKoodiUrit": [
      "kansallinenkoulutusluokitus2016koulutusalataso2_091#1"
    ],
    "koulutustyyppi": "kk-opintojakso",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": 30,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": "opintojenlaajuusyksikko_2#1",
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "kk-opintojakso"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Opintojakso nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create DIA-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_301103#12"
  ],
  "koulutustyyppi": "lk",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "lk",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "lk"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Deutsche Internationale Abitur; Reifeprüfung"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create erikoislääkäri-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_775101#12"
  ],
  "koulutustyyppi": "erikoislaakari",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "erikoislaakari",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "erikoislaakari"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Erikoislääkäri"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create EB-koulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [
    "koulutus_301104#12"
  ],
  "koulutustyyppi": "lk",
  "metadata": {
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "lk",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "lk"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "EB-tutkinto (European Baccalaureate)"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": "1",
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createKoulutus > should be able to create korkeakoulutus opintokokonaisuuskoulutus #0`] =
{
  "ePerusteId": null,
  "esikatselu": true,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "kk-opintokokonaisuus",
  "metadata": {
    "koulutusalaKoodiUrit": [
      "kansallinenkoulutusluokitus2016koulutusalataso2_091#1"
    ],
    "koulutustyyppi": "kk-opintokokonaisuus",
    "kuvaus": {
      "fi": "<p>Kuvaus</p>"
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
        "teksti": {
          "fi": "<p>koulutuksenlisatiedot kuvaus</p>"
        }
      }
    ],
    "opintojenLaajuusKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": 10,
    "opintojenLaajuusNumeroMin": 5,
    "opintojenLaajuusyksikkoKoodiUri": "opintojenlaajuusyksikko_2#1",
    "osaamisalaKoodiUri": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "kk-opintokokonaisuus"
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Opintojakso nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.1.1.1.1"
  ],
  "tila": "julkaistu"
};
